modified bio text

--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
 
                 
                 <div id="fullBioBox">
-                    <p>Before becoming a developer, F&#xE9;lix L&#xE9;ger earned his Masters degree in experimental particle physics. The Linux terminal would change his life forever!</p>
+                    <p>Before becoming a developer, I earned my Masters degree in experimental particle physics. The Linux terminal changed my life forever!</p>
 <p>Get in touch: hi@felixleger.com</p>
 
                 </div>
