added gitlab link

--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,12 @@
                                 </li>
                             
                                 <li class="">
+                                    <a href="https://gitlab.com/felleg" title="GitLab">
+                                        <i class="fa fa-gitlab fa-fw link-icon"></i><span class="description">GitLab</span>
+                                    </a>
+                                </li>
+                            
+                                <li class="">
                                     <a href="https://github.com/felleg" title="GitHub">
                                         <i class="fa fa-github fa-fw link-icon"></i><span class="description">GitHub</span>
                                     </a>
