--- a/static/billy-bob/A_propos.html
+++ b/static/billy-bob/A_propos.html
@@ -1,6 +1,6 @@
-Ces histoires ont été écrites majoritairement entre 2012-2016 en attendant l'autobus 130 du CIT Roussillon lors de mon passage en tant qu'étudiant au bac en mathématiques-physique à l'Université de Montréal.<br>
-Elles ont ete publiées dans le journal L'Électron Libre (j'ignore si des copies pdf existent toujours en ligne) et étaient très populaires à une certaine époque!<br>
-Avec ma graduation, j'ai mis fin à mon récit, mais, qui sait... Peut-être quelqu'un prendra la relève un jour!<br> En attendant, j'espère que vous apprecierez ces petits pets de cerveau bien innocents.<br>
+Ces histoires ont Ã©tÃ© Ã©crites maladroijoritairement entre 2012-2016 en attendant l'autobus 130 du CIT Roussillon lors de mon passage en tant qu'Ã©tudiant au bac en mathÃ©matiques-physique Ã  l'UniversitÃ© de MontrÃ©al.<br>
+Elles ont ete publiÃ©es dans le journal L'Ã‰lectron Libre (j'ignore si des copies pdf existent toujours en ligne) et Ã©taient trÃ¨s populaires Ã  une certaine Ã©poque!<br>
+Avec ma graduation, j'ai mis fin Ã  mon rÃ©cit, mais, qui sait... Peut-Ãªtre quelqu'un prendra la relÃ¨ve un jour!<br> En attendant, j'espÃ¨re que vous apprecierez ces petits pets de cerveau bien innocents.<br>
 <br>
 -F<br><br>
 <center><img src="http://hitwebcounter.com/counter/counter.php?page=6373422&style=0027&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
