--- a/static/billy-bob/6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
+++ b/static/billy-bob/6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
@@ -1,25 +1,25 @@
 <head><title>Billy-Bob!</title></head>
-<font size="10">Les aventures surréalistes de Billy-Bob le rhinocéros<br></font>
+<font size="10">Les aventures surrÃ©alistes de Billy-Bob le rhinocÃ©ros<br></font>
 <font size = "10">Volume VI:</font>
 <font size = "10">Mononcle Pascal isole son grenier avec des cadavres</font><br><br>
-<i>(Decembre 2014, ce volet de l'histoire de Billy-Bob tentait de démontrer l'étendue de son univers: de vrais personnages y vivent, comme Guy Tarisse!)</i><br><br>
+<i>(Decembre 2014, ce volet de l'histoire de Billy-Bob tentait de dÃ©montrer l'Ã©tendue de son univers: de vrais personnages y vivent, comme Guy Tarisse!)</i><br><br>
  
 
-Notre histoire commence avec Guy Tarisse. Ce dernier avait séjourné plus de 16 ans au sein de l'orchestre symphonique de Saint-Sylvestre comme joueur de bâton de pluie. Il s'était fabriqué le sien à partir d'un tuyau de PVC blanc avec des écritures effacées jaunes de plomberie dessus, des pailles du magasin un dollar et du Kraft Dinner volé au IGA (il se l'était fourré directement dans la poche). Guy Tarisse ne savait jouer d'aucun autre instrument.<br><br>
+Notre histoire commence avec Guy Tarisse. Ce dernier avait sÃ©journÃ© plus de 16 ans au sein de l'orchestre symphonique de Saint-Sylvestre comme joueur de bÃ¢ton de pluie. Il s'Ã©tait fabriquÃ© le sien Ã  partir d'un tuyau de PVC blanc avec des Ã©critures effacÃ©es jaunes de plomberie dessus, des pailles du magasin un dollar et du Kraft Dinner volÃ© au IGA (il se l'Ã©tait fourrÃ© directement dans la poche). Guy Tarisse ne savait jouer d'aucun autre instrument.<br><br>
 
-Guy Tarisse vivait une vie bien ordinaire, dans son petit appartement. À l'intérieur de celui-ci était planqué un lit mou beige où il dormait chaque soir avec son bâton de pluie. Personne ne venait lui rendre visite. Personne ne l'invitait à sortir. Guy Tarisse n'avait pas de téléphone, de télévision ou d'ordinateur. Il n'avait que lui-même et son bâton de pluie.<br><br>
+Guy Tarisse vivait une vie bien ordinaire, dans son petit appartement. Ã€ l'intÃ©rieur de celui-ci Ã©tait planquÃ© un lit mou beige oÃ¹ il dormait chaque soir avec son bÃ¢ton de pluie. Personne ne venait lui rendre visite. Personne ne l'invitait Ã  sortir. Guy Tarisse n'avait pas de tÃ©lÃ©phone, de tÃ©lÃ©vision ou d'ordinateur. Il n'avait que lui-mÃªme et son bÃ¢ton de pluie.<br><br>
 
-La manière par laquelle il s'est retrouvé dans l'orchestre symphonique de Saint-Sylvestre était tout de même hors du commun. Initialement, Guy Tarisse ne rêvait pas de jouer du bâton de pluie dans un orchestre symphonique. Pour tout vous dire, Guy Tarisse ne savait pas vraiment quelle était sa raison d'être. Mais Guy Tarisse ne se pose pas ce genre de questions. Guy Tarisse voit, Guy Tarisse fait, et c'est fini.<br><br>
+La maniÃ¨re par laquelle il s'est retrouvÃ© dans l'orchestre symphonique de Saint-Sylvestre Ã©tait tout de mÃªme hors du commun. Initialement, Guy Tarisse ne rÃªvait pas de jouer du bÃ¢ton de pluie dans un orchestre symphonique. Pour tout vous dire, Guy Tarisse ne savait pas vraiment quelle Ã©tait sa raison d'Ãªtre. Mais Guy Tarisse ne se pose pas ce genre de questions. Guy Tarisse voit, Guy Tarisse fait, et c'est fini.<br><br>
 
-Guy Tarisse croisa quelqu'un dans la rue, coin Bloomfield-Ogilvy. Ce dernier demanda qu'on l'appelle M. Nismou. L'inconnu devina immédiatement ses intentions, et lui donna rendez-vous dans un petit restaurant de Côte-des-Neiges. Leur discussion n'était pas animée. Guy Tarisse parlait rarement. Il ne parlait que pour dire les choses importantes. L'autre lui expliqua ce qu'il devait faire :<br><br>
+Guy Tarisse croisa quelqu'un dans la rue, coin Bloomfield-Ogilvy. Ce dernier demanda qu'on l'appelle M. Nismou. L'inconnu devina immÃ©diatement ses intentions, et lui donna rendez-vous dans un petit restaurant de CÃ´te-des-Neiges. Leur discussion n'Ã©tait pas animÃ©e. Guy Tarisse parlait rarement. Il ne parlait que pour dire les choses importantes. L'autre lui expliqua ce qu'il devait faire :<br><br>
 
-« Tu dois simplement prendre du Kraft Dinner et le mettre dans le tuyau de PVC contenant les pailles placées de la bonne façon pour faire du bruit, etc, etc, tu seras le meilleur joueur de bâton de pluie que le monde aura vu, etc, etc, tu es un prodige, etc. »<br><br>
+Â« Tu dois simplement prendre du Kraft Dinner et le mettre dans le tuyau de PVC contenant les pailles placÃ©es de la bonne faÃ§on pour faire du bruit, etc, etc, tu seras le meilleur joueur de bÃ¢ton de pluie que le monde aura vu, etc, etc, tu es un prodige, etc. Â»<br><br>
 
-Guy Tarisse ne comprenait pas pourquoi on lui vouait incessamment tous ces éloges, mais il n'en tint pas compte. Aussitôt ce soir-là, il anima le four de son minuscule appartement et fit bouillir le Kraft Dinner. Il le versa dans le bâton de pluie, attendant sans broncher le bruit agréable qui en sortirait. Mais le son ne vint jamais. Qu'un misérable « poc » gluant. Guy Tarisse attendait encore. Il se demandait quel était le prénom de M. Nismou. Probablement Yalpé. De toute façon, cela n'avait aucune importance. Son bâton de pluie ne fonctionnait pas.<br><br>
+Guy Tarisse ne comprenait pas pourquoi on lui vouait incessamment tous ces Ã©loges, mais il n'en tint pas compte. AussitÃ´t ce soir-lÃ , il anima le four de son minuscule appartement et fit bouillir le Kraft Dinner. Il le versa dans le bÃ¢ton de pluie, attendant sans broncher le bruit agrÃ©able qui en sortirait. Mais le son ne vint jamais. Qu'un misÃ©rable Â« poc Â» gluant. Guy Tarisse attendait encore. Il se demandait quel Ã©tait le prÃ©nom de M. Nismou. Probablement YalpÃ©. De toute faÃ§on, cela n'avait aucune importance. Son bÃ¢ton de pluie ne fonctionnait pas.<br><br>
 
-Guy Tarisse se faisait souvent aborder dans la rue, des fois on lui demandait s'il jouait de la guitare. Il détestait cette question. Mais il leur répondait souvent que personne n'arrivait à jouer la fin de la pièce Raining Blood de Slayer aussi bien que lui. Les gens restaient impressionnés. Guy Tarisse se sentait lourd.<br><br>
+Guy Tarisse se faisait souvent aborder dans la rue, des fois on lui demandait s'il jouait de la guitare. Il dÃ©testait cette question. Mais il leur rÃ©pondait souvent que personne n'arrivait Ã  jouer la fin de la piÃ¨ce Raining Blood de Slayer aussi bien que lui. Les gens restaient impressionnÃ©s. Guy Tarisse se sentait lourd.<br><br>
 
-Éventuellement, il joint l'orchestre symphonique de Saint-Sylvestre, où il y joue du bâton de pluie. Notre histoire finit avec Guy Tarisse, comme elle a commencée.<br><br>
+Ã‰ventuellement, il joint l'orchestre symphonique de Saint-Sylvestre, oÃ¹ il y joue du bÃ¢ton de pluie. Notre histoire finit avec Guy Tarisse, comme elle a commencÃ©e.<br><br>
 <br><br><br><center>
 <img src="http://hitwebcounter.com/counter/counter.php?page=6373431&style=0002&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" >
 </center>
