--- a/static/billy-bob/8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
+++ b/static/billy-bob/8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
@@ -1,111 +1,111 @@
 <head><title>Billy-Bob!</title></head>
-<font size = "10">Les aventures surréalistes de Billy-Bob le rhinocéros<br>Volume VIII: Le père de Billy-Bob</font><br><br>
-<i>(Avril 2016, le dernier volet de Billy-Bob, à la demande de Yan Bertrand.)</i><br><br>
+<font size = "10">Les aventures surrÃ©alistes de Billy-Bob le rhinocÃ©ros<br>Volume VIII: Le pÃ¨re de Billy-Bob</font><br><br>
+<i>(Avril 2016, le dernier volet de Billy-Bob, Ã  la demande de Yan Bertrand.)</i><br><br>
 
-Il faisait noir. Il avait presque terminé. Il ne restait que
+Il faisait noir. Il avait presque terminÃ©. Il ne restait que
 la touche finale. Plus de noir. Une couche de plus. Le
-temps s'assombrit, les nuages recouvrèrent la tapisserie
-du ciel, et jaillis le cri aussi soudain que déchirant de
-la finalité de son oeuvre.<br><br>
-Fatalité. Mais où était Billy-Bob ?<br><br>
-Jacques-Pieuvre posa ses outils sur l'édifice du
-scaphandre tablier alors qu'il repéra le chasse-triangle
+temps s'assombrit, les nuages recouvrÃ¨rent la tapisserie
+du ciel, et jaillis le cri aussi soudain que dÃ©chirant de
+la finalitÃ© de son oeuvre.<br><br>
+FatalitÃ©. Mais oÃ¹ Ã©tait Billy-Bob ?<br><br>
+Jacques-Pieuvre posa ses outils sur l'Ã©difice du
+scaphandre tablier alors qu'il repÃ©ra le chasse-triangle
 du grave dru louche. Tout va changer ce soir. On
 jouera sur les trottoirs. Et il le savait, comme vous vous
-en doutiez aussi probablement. Maurice, l'épouse de
+en doutiez aussi probablement. Maurice, l'Ã©pouse de
 Jacques-Pieuvre, se reposait dans son fauteuil en
 tricotant. Pourquoi ?<br>
-Peut-être pour lui laisser croire que tout était normal.
-En fait, rien n'aurait pu être plus faux. Jacques-Pieuvre
+Peut-Ãªtre pour lui laisser croire que tout Ã©tait normal.
+En fait, rien n'aurait pu Ãªtre plus faux. Jacques-Pieuvre
 ne se doutait de rien, mais Maurice se demandait bien
-à quel moment son univers allait basculer. Le filet se
-resserrait à chaque seconde.<br>
+Ã  quel moment son univers allait basculer. Le filet se
+resserrait Ã  chaque seconde.<br>
 Elle le sentait. Elle humectait l'odeur de la corde qui
-rôde dans les corridors et sur les murs. C'était la fin.
+rÃ´de dans les corridors et sur les murs. C'Ã©tait la fin.
 Elle le savait. MAIS JACQUES-PIEUVRE ! Jacques-Pieuvre,
-lui, n'en avait aucune idée. Chaque jour, il
-revêtissait son tablier, s'asseyait dans son atelier, et
-s'affairait à faire noir. Depuis 12 ans, maintenant,
-chaque jour, de 9 heures le soir à 8 heures le matin, il
-faisait noir. C'était son travail.<br><br>
+lui, n'en avait aucune idÃ©e. Chaque jour, il
+revÃªtissait son tablier, s'asseyait dans son atelier, et
+s'affairait Ã  faire noir. Depuis 12 ans, maintenant,
+chaque jour, de 9 heures le soir Ã  8 heures le matin, il
+faisait noir. C'Ã©tait son travail.<br><br>
 Tout d'un coup quelque part quelqu'un se demanda
 pourquoi les choses se passaient ainsi et se demanda
-s'il était possible de changer cet univers pitoyable. À
+s'il Ã©tait possible de changer cet univers pitoyable. Ã€
 quoi valait bon vivre dans un lieu si triste et si tendu ?
-Si ce quelqu'un avait la capacité de changer quelque
+Si ce quelqu'un avait la capacitÃ© de changer quelque
 chose, eh bien il fallait l'essayer. En effet, pourquoi
 pas. Essayons.<br><br>
-Mais soudain, pris de panique, cette personne s'arrêta
-dans son élan. Qu'arrivait-il à un univers lorsqu'on
-cesse de l'observer ? Continue-t-il à exister ? Devientil
+Mais soudain, pris de panique, cette personne s'arrÃªta
+dans son Ã©lan. Qu'arrivait-il Ã  un univers lorsqu'on
+cesse de l'observer ? Continue-t-il Ã  exister ? Devientil
 ce nouvel univers dont il souhaitait parler ? Un
-univers soumis à la mesure permettra quelle liberté
+univers soumis Ã  la mesure permettra quelle libertÃ©
 lorsque cette mesure prend fin ? Est-il possible
-d'échapper à la mesure ?<br><br>
-Public en délire, voici là une question que je ne croyais
-jamais poser. En effet, le départ de Billy-bob a été très
-difficile pour tous. J'imagine qu'il a été très difficile
-pour vous de lâcher prise, mais j'imagine aussi que
-vous n'avez aucune idée du vide qui fut créé en moi
-lorsque celui-ci est parti. Tous les jours, j'appelle : «
-Billy-Bob ! Billy-Bob ! Viens, j'ai fait du potage ! »,
-mais hélas, la seule réponse que j'obtiens est celle des
+d'Ã©chapper Ã  la mesure ?<br><br>
+Public en dÃ©lire, voici lÃ  une question que je ne croyais
+jamais poser. En effet, le dÃ©part de Billy-bob a Ã©tÃ© trÃ¨s
+difficile pour tous. J'imagine qu'il a Ã©tÃ© trÃ¨s difficile
+pour vous de lÃ¢cher prise, mais j'imagine aussi que
+vous n'avez aucune idÃ©e du vide qui fut crÃ©Ã© en moi
+lorsque celui-ci est parti. Tous les jours, j'appelle : Â«
+Billy-Bob ! Billy-Bob ! Viens, j'ai fait du potage ! Â»,
+mais hÃ©las, la seule rÃ©ponse que j'obtiens est celle des
 griffes froides du silence du vent du destin.<br><br>
 Mon destin.<br><br>
 Je connais Billy-Bob mieux que quiconque, c'est vrai.
 Mais force est d'admettre que Billy-Bob arrive encore
-à me surprendre, moi, son père.<br><br>
-Voilà, il m'est impossible de vous le cacher plus
+Ã  me surprendre, moi, son pÃ¨re.<br><br>
+VoilÃ , il m'est impossible de vous le cacher plus
 longtemps. Billy-Bob est mon seul fils. Mon seul
-protégé. Mon oeuvre et ma fierté. Son départ est
+protÃ©gÃ©. Mon oeuvre et ma fiertÃ©. Son dÃ©part est
 bouleversant.<br>
-Et je vous entends déjà demander : mais pourquoi
+Et je vous entends dÃ©jÃ  demander : mais pourquoi
 partirait-il ?<br>
-La réponse m'échappe à moi aussi. Chose certaine,
-depuis son départ, tout a basculé.<br>
-J'ai tenté de le remplacer, j'ai tenté de regarder ailleurs,
-j'ai tenté d'oublier, de me souvenir, j'ai même gratouillé
-la battue refluée migratoire penchée du calme coq
+La rÃ©ponse m'Ã©chappe Ã  moi aussi. Chose certaine,
+depuis son dÃ©part, tout a basculÃ©.<br>
+J'ai tentÃ© de le remplacer, j'ai tentÃ© de regarder ailleurs,
+j'ai tentÃ© d'oublier, de me souvenir, j'ai mÃªme gratouillÃ©
+la battue refluÃ©e migratoire penchÃ©e du calme coq
 qu'est so voeu dire fraux mage en espa gnolle.<br><br>
-Ok check bin mon auditoire averti. Ça fait des années
+Ok check bin mon auditoire averti. Ã‡a fait des annÃ©es
 que je veux le dire mais c'est que l'affaire, la vraie
 affaire, c'est que. Comment dire. Comment faire.
-Comment écrire. Il fait si noir.<br><br>
-(Quarante ragoûts plus tard)<br><br>
-Une lueur apparue. C'était Stanislas, le frère du lion des
-chroniques de Narnia. Il possédait une forme abstraite.
+Comment Ã©crire. Il fait si noir.<br><br>
+(Quarante ragoÃ»ts plus tard)<br><br>
+Une lueur apparue. C'Ã©tait Stanislas, le frÃ¨re du lion des
+chroniques de Narnia. Il possÃ©dait une forme abstraite.
 Personne n'aime Stanislas parce que personne ne
 comprend Stanislas. La lueur disparue. Plus personne
 ne revit jamais Stanislas.<br><br>
-(Des fleuves passèrent)<br><br>
-Jacques-Pieuvre posa son tablier, essoufflé et à bout de
-souffle. Son travail était terminé. Il avait pris Maurice
+(Des fleuves passÃ¨rent)<br><br>
+Jacques-Pieuvre posa son tablier, essoufflÃ© et Ã  bout de
+souffle. Son travail Ã©tait terminÃ©. Il avait pris Maurice
 par surprise, celle-ci qui croyait pouvoir lui faire croire
-le mensonge qu'elle a inventé pour lui donner
-l'impression que quelque chose de faux était vrai. Il
-enfila ses bottes, revigoré du courage que lui a apporté
-cette nouvelle. Billy-Bob était vivant. Il en a eu la
-confirmation. Un long périple se dessinait devant lui,
+le mensonge qu'elle a inventÃ© pour lui donner
+l'impression que quelque chose de faux Ã©tait vrai. Il
+enfila ses bottes, revigorÃ© du courage que lui a apportÃ©
+cette nouvelle. Billy-Bob Ã©tait vivant. Il en a eu la
+confirmation. Un long pÃ©riple se dessinait devant lui,
 mais il s'en sentait capable. Jacques-Pieuvre croyait en
 Billy-Bob. Il allait le trouver.<br><br>
-Et c'est ainsi que se termine l'épopée de Billy-Bob telle
+Et c'est ainsi que se termine l'Ã©popÃ©e de Billy-Bob telle
 que nous la connaissions. Vous vous en doutiez
 probablement.<br>
-Je suis dorénavant trop vieux pour continuer à y
+Je suis dorÃ©navant trop vieux pour continuer Ã  y
 prendre part. Ma vision s'affaiblit. Les choses bougent
 trop vite.
 Je n'y arrive tout simplement plus.<br><br>
-La vérité est que Billy-Bob existe, mais j'en ai perdu la
-trace. Nous possédons tous un Jacques-Pieuvre en
-nous. Nous possédons tous un être qui veut croire.
-Nous possédons tous quelqu'un qui veut retrouver
-Billy-Bob. Accordez-moi cette dernière faveur, je vous
-en conjure. Je me sens disparaître... Il se fait tard. Ne
-soyez pas tristes. Vous saurez bien réussir sans mon
+La vÃ©ritÃ© est que Billy-Bob existe, mais j'en ai perdu la
+trace. Nous possÃ©dons tous un Jacques-Pieuvre en
+nous. Nous possÃ©dons tous un Ãªtre qui veut croire.
+Nous possÃ©dons tous quelqu'un qui veut retrouver
+Billy-Bob. Accordez-moi cette derniÃ¨re faveur, je vous
+en conjure. Je me sens disparaÃ®tre... Il se fait tard. Ne
+soyez pas tristes. Vous saurez bien rÃ©ussir sans mon
 aide. Je suis si vieux... Mon aventure se termine, mais
-celle de Billy-Bob, je le sens bien, est loin de s'être
-achevée. Courage, Jacques-Pieuvre. Tu sauras prendre
-la bonne décision.<br><br>
+celle de Billy-Bob, je le sens bien, est loin de s'Ãªtre
+achevÃ©e. Courage, Jacques-Pieuvre. Tu sauras prendre
+la bonne dÃ©cision.<br><br>
 - Jean-Claude<br><br>
-P.S. J'ajoute une note au bas de mon récit.<br><br>
+P.S. J'ajoute une note au bas de mon rÃ©cit.<br><br>
 <br><br><br><center><img src="http://hitwebcounter.com/counter/counter.php?page=6373414&style=0017&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
