--- a/static/billy-bob/6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
+++ b/static/billy-bob/6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
@@ -21,5 +21,5 @@ Guy Tarisse se faisait souvent aborder dans la rue, des fois on lui demandait s'
 
 Éventuellement, il joint l'orchestre symphonique de Saint-Sylvestre, où il y joue du bâton de pluie. Notre histoire finit avec Guy Tarisse, comme elle a commencée.<br><br>
 <br><br><br><center>
-<img src="http://hitwebcounter.com/counter/counter.php?page=6373431&style=0002&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" >
+<img src="https://hitwebcounter.com/counter/counter.php?page=6373431&style=0002&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" >
 </center>
