--- a/static/billy-bob/8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
+++ b/static/billy-bob/8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html
@@ -108,4 +108,4 @@ achevée. Courage, Jacques-Pieuvre. Tu sauras prendre
 la bonne décision.<br><br>
 - Jean-Claude<br><br>
 P.S. J'ajoute une note au bas de mon récit.<br><br>
-<br><br><br><center><img src="http://hitwebcounter.com/counter/counter.php?page=6373414&style=0017&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
+<br><br><br><center><img src="https://hitwebcounter.com/counter/counter.php?page=6373414&style=0017&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
