--- a/static/billy-bob/A_propos.html
+++ b/static/billy-bob/A_propos.html
@@ -3,4 +3,4 @@ Elles ont ete publiées dans le journal L'Électron Libre (j'ignore si des copie
 Avec ma graduation, j'ai mis fin à mon récit, mais, qui sait... Peut-être quelqu'un prendra la relève un jour!<br> En attendant, j'espère que vous apprecierez ces petits pets de cerveau bien innocents.<br>
 <br>
 -F<br><br>
-<center><img src="http://hitwebcounter.com/counter/counter.php?page=6373422&style=0027&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
+<center><img src="https://hitwebcounter.com/counter/counter.php?page=6373422&style=0027&nbdigits=5&type=page&initCount=0" title="" Alt=""   border="0" ></center>
