changed page title

--- a/static/pendulum/index.html
+++ b/static/pendulum/index.html
@@ -16,7 +16,7 @@ if ((host == window.location.host) && (window.location.protocol != "https:")){
         <script   src="js/libs/jquery-2.2.4.min.js"   integrity="sha256-BbhdlvQf/xTY9gja0Dq3HiwQF8LaCRTXxZKRutelT44="   crossorigin="anonymous"></script>
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="css/libs/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-        <title>Super Pendulum</title>
+        <title>Magnetic Pendulum - Hackathon</title>
         <!-- Optional theme -->
         <link rel="stylesheet" href="css/libs/bootstrap-theme.min.css" integrity="sha384-fLW2N01lMqjakBkx3l/M9EahuwpSfeNvV63J5ezn3uZzapT0u7EYsXMjQV+0En5r" crossorigin="anonymous">
 
