docs: in pendulum, fix order of devs

--- a/static/pendulum/index.html
+++ b/static/pendulum/index.html
@@ -150,10 +150,10 @@ if ((host == window.location.host) && (window.location.protocol != "https:")){
                     </div>
                 </div>
                 <div class="col-lg-12" style="padding-bottom:20px;">
-                    <h4>The team</h4>
+                    <h4>The team (from left to right)</h4>
                     <ul>
-                        <li><a href="https://www.linkedin.com/in/amirbawab">Amir Bawab</a>: 3rd year Undergraduate in Computer Science at Concordia University</li>
                         <li><a href="https://www.linkedin.com/in/felleg">Félix Léger</a>: 2nd year Masters student in Particle Physics at McGill University</li>
+                        <li><a href="https://www.linkedin.com/in/amirbawab">Amir Bawab</a>: 3rd year Undergraduate in Computer Science at Concordia University</li>
                         <li><a href="http://justinleger.ca">Justin Léger</a>: 2nd year Undergraduate in Software Engineering at Concordia University</li>
                     </ul>
                     <br>
