change display behavior and font size in workout

--- a/static/workout/index.html
+++ b/static/workout/index.html
@@ -8,11 +8,11 @@
 
 <h1 id="greeting"></h1><br>
 
-<label class="container" style="display:none" id="e1"><b><p id="ex1" style="color:red;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
-<label class="container" style="display:none" id="e2"><b><p id="ex2" style="color:purple;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
-<label class="container" style="display:none" id="e3"><b><p id="ex3" style="color:green;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
-<label class="container" style="display:none" id="e4"><b><p id="ex4" style="color:orange;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
-<label class="container" style="display:none" id="e5"><b><p id="ex5" style="color:blue;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block" id="e1"><b><p id="ex1" style="color:red;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block" id="e2"><b><p id="ex2" style="color:purple;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block" id="e3"><b><p id="ex3" style="color:green;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block" id="e4"><b><p id="ex4" style="color:orange;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block" id="e5"><b><p id="ex5" style="color:blue;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
 
 <script src="workout.js"></script>
 
