--- a/static/workout/index.html
+++ b/static/workout/index.html
@@ -8,11 +8,14 @@
 
 <h1 id="greeting"></h1><br>
 
+<label class="container" style="display:block"><b><p style="color:blue;">Circuit des Bras 10 reps (circuit complet habituel)</p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block"><b><p style="color:blue;">Kick de jambes 10 reps (circuit complet, genoux haut, côté-côté, devant)</p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block"><b><p style="color:black;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
 <label class="container" style="display:block" id="e1"><b><p id="ex1" style="color:red;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
 <label class="container" style="display:block" id="e2"><b><p id="ex2" style="color:purple;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
 <label class="container" style="display:block" id="e3"><b><p id="ex3" style="color:orange;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
 <label class="container" style="display:block" id="e4"><b><p id="ex4" style="color:green;"></p></b><input type="checkbox"><span class="checkmark"></span></label>
-<label class="container" style="display:block" id="e5"><b><p id="ex5" style="color:blue;">Bravo!</p></b><input type="checkbox"><span class="checkmark"></span></label>
+<label class="container" style="display:block"><b><p style="color:black;">Bravo!</p></b><input type="checkbox"><span class="checkmark"></span></label>
 
 <script src="workout.js"></script>
 
