update cv redirect path

--- a/static/cv/index.html
+++ b/static/cv/index.html
@@ -1,1 +1,1 @@
-<meta http-equiv="refresh" content="0; url=https://storage.googleapis.com/felleg-cv/cv.pdf" />
+<meta http-equiv="refresh" content="0; url=https://storage.googleapis.com/felleg-cv/felix-leger-cv.pdf" />
