--- a/static/billy-bob/index.html
+++ b/static/billy-bob/index.html
@@ -2,15 +2,32 @@
 <BODY LINK="blue" VLINK="red" BGCOLOR="#cfcffc" BACKGROUND="rhino.png">
 <A NAME= top0000></A>
 <head><title>Billy-Bob!</title></head>
-<font size="10">Bienvenue sur la page personnelle de Billy-Bob le rhinocéros!</font><br><br>
-Choisissez parmi les épisodes suivants:
+
+<a href="1_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="1.png" width="20%" height="50%"></img>
+</a>
+<a href="2_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="2.png" width="20%" height="50%"></img>
+</a>
+<a href="3_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="3.png" width="20%" height="50%"></img>
+</a>
+<a
+  href="4-5_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="4.jpg" width="20%" height="50%"></img>
+</a>
+<a
+  href="4-5_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="5.jpg" width="20%" height="50%"></img>
+</a>
+<a href="6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="6.jpg" width="20%" height="50%"></img>
+</a>
+<a href="7_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+  <img src="7.png" width="20%" height="50%"></img>
+</a>
+
 <ul>
-<li><a href="1_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 1 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="2_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 2 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="3_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 3 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="4-5_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 4-5 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 6 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="7_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros_Le_Film.html"> 7 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros Le Film</a></li>
-<li><a href="8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html"> 8 Les Aventures Surréalistes De Billy-Bob Le Rhinocéros</a></li>
-<li><a href="A_propos.html"> À propos</a></li>
+  <li><a href="A_propos.html"> À propos</a></li>
+</ul>
 
