--- a/static/billy-bob/index.html
+++ b/static/billy-bob/index.html
@@ -23,8 +23,11 @@
 <a href="6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
   <img src="6.jpg" width="20%" height="50%"></img>
 </a>
-<a href="7_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
+<a href="7_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros_Le_Film.html">
   <img src="7.png" width="20%" height="50%"></img>
+</a>
+<a href="8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros_Le_Film.html">
+  <img src="8.png" width="20%" height="50%"></img>
 </a>
 
 <ul>
