--- a/static/billy-bob/index.html
+++ b/static/billy-bob/index.html
@@ -3,36 +3,38 @@
 <A NAME= top0000></A>
 <head><title>Billy-Bob!</title></head>
 
-
-<ul>
-  <li><a href="https://www.youtube.com/watch?v=UXqCrlo47fc">Le film (lien direct)</a></li>
-  <li><a href="A_propos.html"> À propos</a></li>
-</ul>
+<h1>Choisissez votre épisode:</h1>
 
 <a href="1_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="1.png" width="33%" height="33%"></img>
+  <img src="1.png" width="30%" height="30%"></img>
 </a>
 <a href="2_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="2.png" width="33%" height="33%"></img>
+  <img src="2.png" width="30%" height="30%"></img>
 </a>
 <a href="3_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="3.png" width="33%" height="33%"></img>
+  <img src="3.png" width="30%" height="30%"></img>
 </a>
 <a
   href="4-5_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="4.jpg" width="33%" height="33%"></img>
+  <img src="4.jpg" width="30%" height="30%"></img>
 </a>
 <a
   href="4-5_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="5.jpg" width="33%" height="33%"></img>
+  <img src="5.jpg" width="30%" height="30%"></img>
 </a>
 <a href="6_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="6.jpg" width="33%" height="33%"></img>
+  <img src="6.jpg" width="30%" height="30%"></img>
 </a>
 <a href="7_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros_Le_Film.html">
-  <img src="7.png" width="33%" height="33%"></img>
+  <img src="7.png" width="30%" height="30%"></img>
 </a>
 <a href="8_Les_Aventures_Surrealistes_De_Billy-Bob_Le_Rhinoceros.html">
-  <img src="8.png" width="33%" height="33%"></img>
+  <img src="8.png" width="60%" height="30%"></img>
 </a>
+
+<ul>
+  <li><a href="https://www.youtube.com/watch?v=UXqCrlo47fc">Lien direct
+    vers le film</a></li>
+  <li><a href="A_propos.html"> À propos</a></li>
+</ul>
 
