--- a/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/index.html
+++ b/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/index.html
@@ -7,7 +7,7 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<h1>Do you know this person?</h1>
+<p>Do you know this person?</p>
 <div id="buttons">
     <button class="know-button" onclick="knowPerson()">I know this person</button>
     <button class="dont-know-button" onclick="dontKnowPerson()">I don't know this person</button>
