--- a/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/index.html
+++ b/static/do-you-know-this-person-243987978423987fsdalksadflqrweoyzv/index.html
@@ -7,17 +7,18 @@
 <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-<div id="photo-container">
 <p>Do you know this person?</p>
-<p id="photo-number"></p>
 <div id="buttons">
     <button class="know-button" onclick="knowPerson()">I know this person</button>
     <br><br>
     <button class="dont-know-button" onclick="dontKnowPerson()">I don't know this person</button>
 </div>
 <p id="score">Score: 0</p>
-<h2 id="photo-name"></h2>
-<img id="photo" src="" alt="Random Photo">
+<div id="photo-container">
+  <h2 id="photo-name"></h2>
+  <p id="photo-number"></p>
+  <img id="photo" src="" alt="Random Photo">
+</div>
 
 <script src="script.js"></script>
 </body>
