docs(weconnect-quiz): docs on index page

--- a/static/weconnect-quiz/index.html
+++ b/static/weconnect-quiz/index.html
@@ -36,7 +36,10 @@
 <body>
 <center>
    <h1>We Connect Quiz!</h1>
-   <p>Inspired by https://weconnectcards.com/</p>
+   <p>Inspired by <a
+                        href="https://weconnectcards.com/">https://weconnectcards.com</a></p>
+   <p>Created for Portage Cybertech's first Dev-a-hack-a-thon-a-day, May
+   31 2024.
   <div class="button-container">
     <button class="button" onclick="buttonClicked('button1')">Step 1) Fill the form</button>
     <button class="button" onclick="buttonClicked('button2')">Step 2) Take the quiz</button>
