qr code, readme

--- a/static/weconnect-quiz/quiz.html
+++ b/static/weconnect-quiz/quiz.html
@@ -20,9 +20,11 @@
     <p id="feedback"></p>
   </div>
   <div id="results-container" style="display: none">
-     <h1>Score</h1>
-     <p id="score"></p>
-     <p id="score_p"></p>
+     <h1>Thank you for playing!</h1>
+     <h2 id="score"></h2>
+     <h2 id="score_p"></h2>
+     Share with your friends!
+     <img src="quiz-qr.png"></img>
   </div>
   <script src="script.js"></script>
 </body>
