--- a/static/weconnect-quiz/index.html
+++ b/static/weconnect-quiz/index.html
@@ -35,7 +35,7 @@
 </head>
 <body>
 <center>
-   <h1>We Connect Quiz!</h1>
+   <img src="weconnect-quiz.png" style="width: 75%;"></img>
    <p>Inspired by <a
                         href="https://weconnectcards.com/">https://weconnectcards.com</a></p>
    <p>Created for Portage Cybertech's first Dev-a-hack-a-thon-a-day, May
