--- a/static/weconnect-quiz/index.html
+++ b/static/weconnect-quiz/index.html
@@ -36,14 +36,17 @@
 <body>
 <center>
    <img src="weconnect-quiz.png" style="width: 75%;"></img>
-   <p>Inspired by <a
-                        href="https://weconnectcards.com/">https://weconnectcards.com</a></p>
-   <p>Created for Portage Cybertech's first Dev-a-hack-a-thon-a-day, May
-   31 2024.
   <div class="button-container">
     <button class="button" onclick="buttonClicked('button1')">Step 1) Fill the form</button>
     <button class="button" onclick="buttonClicked('button2')">Step 2) Take the quiz</button>
   </div>
+   <p>Created for Portage Cybertech's first Dev-a-Hack-a-Thon-a-Day, May
+   31 2024.
+   <p><a
+         href="https://notarius.hubs.vidyard.com/watch/H4b7aE4qd6ER3Rk2GeWEd9?">Video
+         Demonstration</a></p>
+   <p>Inspired by <a
+                        href="https://weconnectcards.com/">https://weconnectcards.com</a></p>
 </center>
 
   <script>
