make take the quiz above fill the form

--- a/static/weconnect-quiz/index.html
+++ b/static/weconnect-quiz/index.html
@@ -36,9 +36,11 @@
 <body>
 <center>
    <img src="weconnect-quiz.png" style="width: 75%;"></img>
+   <p>In this game, you try to guess who gave what answer to which
+   question. Click "Fill the form" to contribute to our database!</p>
   <div class="button-container">
-    <button class="button" onclick="buttonClicked('button1')">Step 1) Fill the form</button>
-    <button class="button" onclick="buttonClicked('button2')">Step 2) Take the quiz</button>
+    <button class="button" onclick="buttonClicked('button2')">Take the quiz</button>
+    <button class="button" onclick="buttonClicked('button1')">Fill the form</button>
   </div>
    <p>Created for Portage Cybertech's first Dev-a-Hack-a-Thon-a-Day, May
    31 2024.
