--- a/static/weconnect-quiz/quiz.html
+++ b/static/weconnect-quiz/quiz.html
@@ -5,6 +5,35 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Quiz</title>
   <link rel="stylesheet" href="styles.css">
+  <style>
+    body {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 100vh;
+      margin: 0;
+      background-color: #f0f0f0;
+    }
+    .button-container {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+    }
+    .button {
+      padding: 20px;
+      font-size: 24px;
+      margin: 10px;
+      border: none;
+      border-radius: 8px;
+      background-color: #007bff;
+      color: white;
+      cursor: pointer;
+      transition: background-color 0.3s ease;
+    }
+    .button:hover {
+      background-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
   <span id="loading">Now loading...</span>
@@ -23,11 +52,23 @@
      <h1>Thank you for playing!</h1>
      <h2 id="score"></h2>
      <h2 id="score_p"></h2>
-     Share with your friends!
-     <br>
-     <img src="quiz-qr.png"></img>
-  </div>
-  <script src="script.js"></script>
+    <button class="button" onclick="buttonClicked('button1')">Add your
+       answers to our game!</button>
+     <script>
+       function buttonClicked(buttonId) {
+         if (buttonId === 'button1') {
+           window.open("https://forms.gle/btuEHb7WJ1VskQz58", "_blank");
+
+         } else if (buttonId === 'button2') {
+           window.open("quiz.html", "_blank");
+         }
+       }
+      </script>
+        Share with your friends!
+        <br>
+        <img src="quiz-qr.png"></img>
+     </div>
+     <script src="script.js"></script>
 </body>
 </html>
 
