--- a/static/weconnect-quiz/quiz.html
+++ b/static/weconnect-quiz/quiz.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quiz</title>
+  <title>WeConnect Quiz!</title>
   <link rel="stylesheet" href="styles.css">
   <style>
     body {
@@ -33,10 +33,25 @@
     .button:hover {
       background-color: #0056b3;
     }
+            body {
+            font-family: Arial, sans-serif;
+        }
+        .slider-container {
+            margin: 50px;
+        }
+        .slider {
+            width: 100%;
+        }
   </style>
 </head>
 <body>
   <span id="loading">Now loading...</span>
+  <div class="slider-container" id="slider-container" style="display: none">
+     <label for="mySlider">Choose your quiz length:<br><center><span
+            id="sliderValue"></span> questions</center></label><br>
+      <input type="range" id="mySlider" class="slider" min="0">
+      <center><button id="start-button">Start</button></center>
+  </div>
   <div id="quiz-container" style="display: none">
     <p id="progress"></p>
     <p>To the question:</p>
@@ -65,6 +80,7 @@
        }
       </script>
         Share with your friends!
+        <br>
         <br>
         <img src="quiz-qr.png"></img>
      </div>
