quiz slider ui fix

--- a/static/weconnect-quiz/quiz.html
+++ b/static/weconnect-quiz/quiz.html
@@ -47,8 +47,9 @@
 <body>
   <span id="loading">Now loading...</span>
   <div class="slider-container" id="slider-container" style="display: none">
-     <label for="mySlider">Choose your quiz length:<br><center><span
-            id="sliderValue"></span> questions</center></label><br>
+     <label for="mySlider">How many questions should your quiz
+        last?<br><center><h1
+            id="sliderValue"></h1></center></label><br>
       <input type="range" id="mySlider" class="slider" min="0">
       <center><button id="start-button">Start</button></center>
   </div>
