link portage cybertech

--- a/static/weconnect-quiz/index.html
+++ b/static/weconnect-quiz/index.html
@@ -43,7 +43,7 @@
     <button class="button" onclick="buttonClicked('button1')">Fill the form</button>
     <button class="button" onclick="buttonClicked('button3')">Version française (beta)</button>
   </div>
-   <p>Created for Portage Cybertech's first Dev-a-Hack-a-Thon-a-Day, May
+   <p>Created for [Portage Cybertech](https://portagecybertech.com)'s first Dev-a-Hack-a-Thon-a-Day, May
    31 2024.
    <p><a
          href="https://notarius.hubs.vidyard.com/watch/H4b7aE4qd6ER3Rk2GeWEd9?">Video
