style(redirect): center things, add created by felix leger

--- a/static/redirect/index.html
+++ b/static/redirect/index.html
@@ -42,12 +42,18 @@
 </head>
 <body>
     <h1>Type your redirect key</h1>
+    <center>
     <form onsubmit="redirect(event)">
         <input type="text" id="redirectKey" placeholder="Enter key here" required>
         <button type="submit">Submit</button>
     </form>
+    </center>
     <div class="footer">
+       <center>
+        Created by <a href="https://felixleger.com"
+                      target="_blank">Félix Léger</a><br>
         Powered by <a href="https://vanityurls.link/" target="_blank">VanityURLs</a>
+       </center>
     </div>
 
     <script>
